[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/icons/spells/player/16.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/WigglyCurvesRegular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/objects/ui/AwardBox.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 2 )

[node name="AwardBox" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 192.0
color = Color( 0.6, 0.6, 0.6, 0.901961 )

[node name="TitleLabel" type="Label" parent="."]
margin_top = 16.0
margin_right = 320.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Your awards"
align = 1

[node name="HealthLabel" type="Label" parent="."]
margin_left = 64.0
margin_top = 48.0
margin_right = 288.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "+50 health"

[node name="ManaLabel" type="Label" parent="."]
margin_left = 64.0
margin_top = 80.0
margin_right = 288.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "+50 mana"

[node name="DamageLabel" type="Label" parent="."]
margin_left = 64.0
margin_top = 112.0
margin_right = 288.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 2 )
text = "+5% damage"

[node name="NoSpellLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 136.0
margin_right = 56.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 5 )
text = "X"
align = 1
valign = 1

[node name="SpellRect" type="TextureRect" parent="."]
margin_left = 8.00001
margin_top = 136.0
margin_right = 520.0
margin_bottom = 648.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="SpellLabel" type="Label" parent="."]
margin_left = 64.0
margin_top = 136.0
margin_right = 304.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 3 )
text = "New spell! Heal player and do no damage for enemy. 
The spell costs 23 mana."
